--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -39,7 +39,7 @@
 
 <br /><br />
 
-p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
+<p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
 
 <br /><br />
 
@@ -52,6 +52,7 @@ p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source softwa
 <br /><br />
 
 <p><a href="http://www.nas4free.org/">NAS4Free</a> is a network-attached storage (NAS) server software with a dedicated management web interface (written in PHP).</p>
+
 <br /><br />
 
 <p><a href="https://www.netbsd.org/">NetBSD</a> is a free, fast, secure, and highly portable Unix-like Open Source operating system. It is available for a wide range of platforms, from large-scale servers and powerful desktop systems to handheld and embedded devices. Its 
