--- a/online-courses.html
+++ b/online-courses.html
@@ -21,12 +21,13 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (49):</h3>
+          <h3>Online Courses (51):</h3>
           <br />
           
 	  <br />
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
           <p>Bento <a href="https://bento.io/">https://bento.io/</a> web dev</p>
+          <p>CloudAcademy <a href="https://cloudacademy.com/">https://cloudacademy.com/</a>
           <p>Code Avengers <a href="https://www.codeavengers.com/">https://www.codeavengers.com/</a> code</p>
           <p>CodeCombat <a href="http://codecombat.com/">http://codecombat.com/</a> learn by gaming</p>
           <p>Code School <a href="https://www.codeschool.com/">https://www.codeschool.com/</a> code</p>
@@ -38,6 +39,7 @@
           <p>Coursera <a href="https://www.coursera.org/">https://www.coursera.org/</a></p>
           <p>Cybrary <a href="https://www.cybrary.it/">https://www.cybrary.it/</a> infosec</p>
           <p>DataCamp <a href="https://www.datacamp.com/">https://www.datacamp.com/</a> data science</p>
+          <p>DeZyre <a href="https://www.dezyre.com/">https://www.dezyre.com/</a></p>
           <p>edX <a href="https://www.edx.org/">https://www.edx.org/</a></p>
           <p>Envato Tuts+ <a href="http://tutsplus.com/">http://tutsplus.com/</a> code</p>
           <p>Free Code Camp <a href="http://www.freecodecamp.com/">http://www.freecodecamp.com/</a> web dev</p>
