add page, links, mv

--- a/book-pub.html
+++ b/book-pub.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my!</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Book Publishers</title>
   </head>
    <body>
     <div id="container">
@@ -21,28 +21,20 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (626):</h3>
+          <h3>Book Publishers (6):</h3>
           <br />
-          <ul>
-          <li><a href="conferences.html">Conferences</a> (45)</li>
-          <li><a href="book-pub.html">Book Publishers</a> (6)</li> 
-          <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
-          <li><a href="cybersecurity.html">Ethical Hacking, Forensics, Infosec, PenTesting</a> (33)</li>
-          <li><a href="firewalls.html">Firewalls: Distributions and Front-ends</a> (10)</li>
-          <li><a href="illumosdistros.html">Illumos Distributions: Desktop and Server</a> (6)</li>
-          <li><a href="linuxdistros-anonymity.html">Linux Distributions: Anonymity and Privacy</a> (5)</li>
-          <li><a href="linuxdistros-desktop-server.html">Linux Distributions: Desktop and Server</a> (10)</li>
-          <li><a href="linuxdistros-infosec.html">Linux Distributions: Information Security</a> (15)</li>
-          <li><a href="magazines.html">Magazines</a> (24)</li>
-          <li><a href="moble-os.html">Moble Operating Systems</a> (4)</li>
-          <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (100)</li>
-          <li><a href="non-foss.html">NON-FOSS Links</a> (187)</li>
-          <li><a href="online-courses.html">Online Courses</a> (59)</li>
-          <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (9)</li>
-          <li><a href="python-programming.html">Python Programming</a> (69)</li>
-          <li><a href="robotics.html">Robotics</a> (4)</li>
-          <li><a href="video-gaming.html">Video Gaming: Linux</a> (27)</li>
-          </ul>
+          <p><a href="http://www.dummies.com/">Dummies</a> is the platform that makes learning anything easy because it transforms the hard-to-understand into easy-to-use.</p>
+          <br />
+          <p><a href="https://www.nostarch.com/">No Starch Press</a> publishes the finest in geek entertainment — distinctive books on computing.</p>
+          <br />
+          <p><a href="https://www.oreilly.com/">O'Reilly Media</a> is an American media company established by Tim O'Reilly that publishes books and Web sites and produces conferences on computer technology topics. Their distinctive brand features a woodcut of an animal on many of their book covers.</p>
+          <br />
+          <p><a href="https://www.packtpub.com/">Packt Publishing</a> provides books, eBooks, video tutorials, and articles for IT developers, administrators, and users.</p>
+          <br />
+          <p><a href="http://www.wiley.com/">Wiley</a> is a global publishing company that specializes in academic publishing and markets its products to professionals and consumers, students and instructors in higher education, and researchers and practitioners in scientific, technical, medical, and scholarly fields. The company produces books, journals, and encyclopedias, in print and electronically, as well as online products and services, training materials, and educational materials for undergraduate, graduate, and continuing education students.</p>
+          <br />
+          <p><a href="http://www.wrox.com/">Wrox</a> books are written by programmers for programmers.</p>
+          
 	  <br />
 	  
 
