fix missing tag

--- a/online-courses.html
+++ b/online-courses.html
@@ -129,7 +129,7 @@
           <p>Frontend Masters <a href="https://frontendmasters.com/">https://frontendmasters.com/</a></p>
           <p>GA Dash <a href="https://dash.generalassemb.ly/">https://dash.generalassemb.ly/</a></p>
           <p>Gymnasium <a href="http://gymnasium.aquent.com/">http://gymnasium.aquent.com/</a></p>
-          <p>Mijingo <a href="https://mijingo.com/">https://mijingo.com/</a>/p>
+          <p>Mijingo <a href="https://mijingo.com/">https://mijingo.com/</a></p>
           <p>Skillcrush <a href="http://skillcrush.com/">http://skillcrush.com/</a></p>
           <p>The Odin Project <a href="http://www.theodinproject.com/">http://www.theodinproject.com/</a></p>
 
