fix broken link

--- a/online-courses.html
+++ b/online-courses.html
@@ -89,7 +89,7 @@
           <h3><a id="Misc">Misc. Online Courses</a> (34):</h3>
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
           <p>CGCircuit <a href="https://www.cgcircuit.com/">https://www.cgcircuit.com/</a></p>
-          <p>ChalkStreet <a href"https://www.chalkstreet.com/">https://www.chalkstreet.com/</a></p>
+          <p>ChalkStreet <a href="https://www.chalkstreet.com/">https://www.chalkstreet.com/</a></p>
           <p>Code Avengers <a href="https://www.codeavengers.com/">https://www.codeavengers.com/</a></p>
           <p>Code School <a href="https://www.codeschool.com/">https://www.codeschool.com/</a></p>
           <p>Codecademy <a href="https://www.codecademy.com/">https://www.codecademy.com/</a></p>
