--- a/bsd-gnu.html
+++ b/bsd-gnu.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Linux Distributions: Anonymity and Privacy</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | GNU/BSD Distributions: Desktop and Server</title>
   </head>
    <body>
     <div id="container">
@@ -21,17 +21,17 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Linux Distributions: Anonymity &amp; Privacy (5):</h3>
+          <h3>GNU/BSD Distributions: Desktop &amp; Server (3):</h3>
           <br />
-          <p><a href="https://anonymous-proxy-servers.net/en/jondo-live-cd.html">JonDo/Tor-Secure-Live-DVD</a> offers a secure, pre-configured environment for anonymous surfing and more. It is based on Debian GNU/Linux. The live system contains proxy clients for JonDonym, Tor Onion Router and Mixmaster remailer. JonDoFox is a pre-configured browser for anonymous web surfing and TorBrowser is installed too.</p>
-          <br /><br />
-          <p><a href="http://www.spi.dod.mil/lipose.htm">Lightweight Portable Security</a> (LPS) creates a secure end node from trusted media on almost any Intel-based computer (PC or Mac). LPS boots a thin Linux operating system from a CD or USB flash stick without mounting a local hard drive. Administrator privileges are not required; nothing is installed.</p>
-          <br /><br />
-          <p><a href="https://www.qubes-os.org/">Qubes OS</a> implements a Security by Isolation approach. To do this, Qubes utilizes virtualization technology in order to isolate various programs from each other and even to sandbox many system-level components, such as networking and storage subsystems, so that the compromise of any of these programs or components does not affect the integrity of the rest of the system.</p>
-          <br /><br />
-          <p><a href="https://tails.boum.org/">Tails</a> is a Debian based live system that aims to preserve your privacy and anonymity. It helps you to use the Internet anonymously and circumvent censorship almost anywhere you go and on any computer but leaving no trace unless you ask it to explicitly.</p>
-          <br /><br />
-          <p><a href="https://www.whonix.org/">Whonix</a> is an operating system focused on anonymity, privacy and security. It's based on the Tor anonymity network, Debian GNU/Linux and security by isolation.</p>
+          <p><a href="https://www.debian.org/ports/kfreebsd-gnu/">Debian GNU/kFreeBSD</a> is an operating system released by the Debian project. It uses the kernel of FreeBSD combined with a GNU based userland and glibc. The majority of
+            software in Debian GNU/kFreeBSD is built from the same sources as Debian GNU/Linux.</p>
+          <br />
+          <p><a href="https://wiki.gentoo.org/wiki/Project:FreeBSD">Gentoo/FreeBSD</a> (or Gentoo/FBSD, or G/FBSD) is an effort to create a complete FreeBSD-based Gentoo system, sharing the complete administration facilities of Gentoo with the
+            reliability of the FreeBSD kernel and userland.</p>
+          <br />
+          <p><a href="https://pacbsd.org/">PacBSD</a> is an independently developed, x86-64 general purpose GNU/BSD distribution versatile enough to suit any role. Development focuses on simplicity, minimalism, and code
+            elegance. PacBSD is installed as a minimal base system, configured by the user upon which their own ideal environment is assembled by installing only what is required or
+            desired for their unique purposes. PacBSD uses Archlinux’s Pacman package manager, which couples simple binary packages with an easy-to-use package build system.</p>
 
 	  <br />
 
@@ -56,8 +56,8 @@
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
-                                        <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
-                                        <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
+          <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
+          <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
 					<li><a href="https://www.reddit.com/r/linux" class="tooltip">reddit/linux<span>Online community where users vote on content.</span></a></li>
 					<li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
 					<li><a href="http://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
