--- a/linuxdistros-desktop-server.html
+++ b/linuxdistros-desktop-server.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- 
+<!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
 	URL: http://monsterb.github.io/ -->
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Linux Distributions: Desktop and Server (10):</h3>
+          <h3>Linux Distributions: Desktop &amp; Server (10):</h3>
           <br />
           <p><a href="https://www.archlinux.org/">Arch Linux</a>, a lightweight and flexible Linux distribution that tries to Keep It Simple.</p>
           <br /><br />
@@ -30,7 +30,7 @@
           <p><a href="https://crux.nu/">CRUX</a> is a lightweight Linux distribution for the x86-64 architecture targeted at experienced Linux users. The primary focus of this distribution is 'keep it simple', which is reflected in a straightforward tar.gz-based package system, BSD-style initscripts, and a relatively small collection of trimmed packages. The secondary focus is utilization of new Linux features and recent tools and libraries. CRUX also has a ports system which makes it easy to install and upgrade applications.</p>
           <br /><br />
           <p><a href="https://www.debian.org/">Debian</a> provides more than a pure OS: it comes with over 43000 packages, precompiled software bundled up in a nice format for easy installation on your machine.</p>
-          <br /><br />          
+          <br /><br />
           <p><a href="https://getfedora.org/">Fedora</a> is a Linux distribution developed by the community-supported Fedora Project and owned by <a href="http://www.redhat.com/">Red Hat</a>. Fedora contains software distributed under a free and open-source license and aims to be on the leading edge of such technologies. Fedora has a reputation for focusing on innovation, integrating new technologies early on and working closely with upstream Linux communities.</p>
           <br /><br />
           <p><a href="https://www.gentoo.org/">Gentoo</a> is a flexible, source-based Linux distribution that becomes just about any system you need—and much more.</p>
@@ -45,7 +45,7 @@
           <br /><br />
           <p><a href="http://www.ubuntu.com/">Ubuntu</a> is a complete desktop Linux operating system, freely available with both community and professional support.</p>
 	  <br />
-	  
+
 
 	     </div>
 	       <div id="favorites">
@@ -63,7 +63,7 @@
 					<li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
 					<li><a href="http://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
 					<li><a href="http://kernelpanicoggcast.net/" class="tooltip">Kernelpanic Oggcast<span>They discuss all the latest linux news, linux gadgets and whatever else pops up. Basket Weaving, fishing, woodworking, recipes, you name it.</span></a></li>
-					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>					
+					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
@@ -79,10 +79,10 @@
 				</ul>
 
 		  </div>
-	       
-	       
-	         <div id="footer"> 
-	           <p>Copyleft &copy; 2006-2017 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>   
+
+
+	         <div id="footer">
+	           <p>Copyleft &copy; 2006-2017 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
 	         </div>
 	  </div>
   </body>
