clean up fav menu

--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
 					<li><a href="https://www.debuntu.org/" class="tooltip">Debuntu.org<span>Debian/Ubuntu .deb packages, Unix/Linux Tutorials, Tips and Tricks.</span></a></li>
 					<li><a href="https://distrowatch.com/" class="tooltip">DistroWatch<span>Put the fun back into computing. Use Linux, BSD.</span></a></li>
 					<li><a href="https://www.eff.org/" class="tooltip">EFF<span>The Electronic Frontier Foundation is the leading civil liberties group defending your rights in the digital world.</span></a></li>
+          <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
 					<li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
 					<li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
 					<li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
