--- a/blogs.html
+++ b/blogs.html
@@ -21,8 +21,12 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Open Source Tech Blogs, Howtos, Guides, and Tutorials (10):</h3>
+          <h3>Open Source Tech Blogs, Howtos, Guides, and Tutorials (15):</h3>
           <br />
+
+          <p><a href="http://www.2daygeek.com/">2daygeek</a> - Linux Tips, Tricks, How-to Guides, &amp; Tutorials</p>
+
+          <br /><br />
 
           <p><a href="https://www.cyberciti.biz/">nixCraft</a> is an online community of new and seasoned Linux / Unix sysadmins who want to make the most of sysadmin-hood.</p>
 
@@ -34,6 +38,18 @@
           <br /><br />
 
           <p><a href="http://fossforce.com/">FOSS Force</a> is a news site offering insight into the goings on in the IT world, focusing on the interests of the Open Source community.</p>
+
+          <br /><br />
+
+          <p><a href="https://www.howtoforge.com/">HowtoForge</a> provides user-friendly Linux tutorials.</p>
+
+          <br /><br />
+
+          <p><a href="https://itsfoss.com/">It’s F.O.S.S.</a> is a blog that focuses on Open Source in general and Linux in particular.</p>
+
+          <br /><br />
+
+          <p><a href="http://linoxide.com/">LinOxide</a> is a blog platform where we publish howto articles and guides on linux and unix based distros.</p>
 
           <br /><br />
 
@@ -55,6 +71,10 @@
           <br /><br />
 
           <p><a href="http://www.tecmint.com/">Tecmint</a>: Linux Howtos, Tutorials, and Guides</p>
+
+          <br /><br />
+
+          <p><a href="http://www.thegeekstuff.com/">The Geek Stuff</a> - How-Tos, troubleshooting tips and tricks Linux and open source technologies.</p>
 
           <br /><br />
 
